feature/docker: update graphql config for assset-classification-subgraph

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DATABASE_PASSWORD="superadminpassword"
 DATABASE_NAME="porfolio_wealth"
 DATABASE_SYNCHRONIZE=true
 DATABASE_AUTO_LOAD_ENTITIES=true
+ASSET_CLASSIFICATION_GRAPHQL_URL=http://asset-classification:3001/graphql
