--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "@nestjs/typeorm": "^11.0.0",
     "graphql": "^16.11.0",
     "joi": "^17.13.3",
+    "nestjs-pino": "^4.4.0",
     "pg": "^8.16.3",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
