--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DATABASE_NAME="porfolio_wealth"
 DATABASE_SYNCHRONIZE=true
 DATABASE_AUTO_LOAD_ENTITIES=true
 ASSET_CLASSIFICATION_GRAPHQL_URL=http://asset-classification:3001/graphql
+NODE_ENV="development"
+LOG_LEVEL="info"
