add db script for seed firm

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "jest --config ./apps/gateway/test/jest-e2e.json",
-		"seed:asset-classification": "npx ts-node ./scripts/seedAssetClassification.ts"
+		"seed:asset-classification": "npx ts-node ./scripts/seedAssetClassification.ts",
+		"seed:firm": "npx ts-node ./scripts/seedFirm.ts"
 	},
 	"dependencies": {
 		"@apollo/gateway": "^2.11.2",
