add holding subgraph to gateway

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_HOST="localhost"
+DATABASE_HOST="postgres"
 DATABASE_PORT=5432
 DATABASE_USERNAME="superadminuser"
 DATABASE_PASSWORD="superadminpassword"
@@ -8,5 +8,6 @@ DATABASE_AUTO_LOAD_ENTITIES=true
 ASSET_CLASSIFICATION_GRAPHQL_URL=http://asset-classification:3001/graphql
 FIRM_GRAPHQL_URL=http://firm:3002/graphql
 CLIENT_GRAPHQL_URL=http://client:3003/graphql
+HOLDING_GRAPHQL_URL=http://holding:3004/graphql
 NODE_ENV="development"
 LOG_LEVEL="info"
