add url for performance return to gateway

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ ASSET_CLASSIFICATION_GRAPHQL_URL=http://asset-classification:3001/graphql
 FIRM_GRAPHQL_URL=http://firm:3002/graphql
 CLIENT_GRAPHQL_URL=http://client:3003/graphql
 HOLDING_GRAPHQL_URL=http://holding:3004/graphql
+PERFORMANCE_RETURN_GRAPHQL_URL=http://performance:3005/graphql
 NODE_ENV="development"
 LOG_LEVEL="info"
